--- a/Web/Views/Admin/Index.cshtml
+++ b/Web/Views/Admin/Index.cshtml
@@ -12,6 +12,129 @@
     string avatar = @User.Claims.Where(x => x.Type.Equals("UserAvatarName")).Select(x => x.Value).SingleOrDefault();
 }
 
+<nav id="topNavbar" class="z-1 navbar navbar-expand-lg navbar-dark bg-black b-bottom">
+    <div class="container container-micro pe-5">
+        <a class="navbar-brand me-2" href="#">
+            <img src="~/media/site/logo.png" alt="" width="36" />
+        </a>
+        <button class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Переключатель навигации">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <form asp-controller="home" class="search-nav-form flex-form-dark circle-flex-search">
+                <div class="dropdown">
+                    <input autocomplete="off"
+                           name="search"
+                           id="dropdownMenuLink"
+                           data-bs-toggle="dropdown"
+                           aria-expanded="false"
+                           class="search-form form-upd dropdown-toggle t-md form-control me-2 form-control"
+                           type="search"
+                           placeholder="Найти идею"
+                           aria-label="Search" />
+                    <ul class="mt-2 search-nav-dropdown pt-2 pb-2 col-12 rad-md bg-darkc dropdown-menu p-0 t-sm t-semi-bold"
+                        aria-labelledby="dropdownMenuLink">
+                        <li>
+                            <a asp-controller="home" asp-action="index" class="search-dropdown dropdown-item" asp-route-key="popular">Популярные</a>
+                        </li>
+                        <li>
+                            <a asp-controller="home" asp-action="index" class="search-dropdown dropdown-item" asp-route-key="new">Новые</a>
+                        </li>
+                    </ul>
+                </div>
+                <button class="btn btn-unfocus" type="submit">
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                         width="16"
+                         height="16"
+                         fill="currentColor"
+                         class="clr-mute bi bi-search"
+                         viewBox="0 0 16 16">
+                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                    </svg>
+                </button>
+            </form>
+            <ul style="align-items: center;"
+                class="navbar-nav ms-auto mb-2 mb-lg-0 pe-4">
+                <li class="nav-item">
+                    <a class="nav-link-pad nav-link" asp-controller="home">
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                             width="22"
+                             height="22"
+                             fill="currentColor"
+                             class=" bi bi-house"
+                             viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                  d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
+                            <path fill-rule="evenodd"
+                                  d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z" />
+                        </svg>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link-pad nav-link" asp-controller="find">
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                             width="22"
+                             height="22"
+                             fill="currentColor"
+                             class="bi bi-people"
+                             viewBox="0 0 16 16">
+                            <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z" />
+                        </svg>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link-pad nav-link" asp-controller="chat">
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                             width="22"
+                             height="22"
+                             fill="currentColor"
+                             class="bi bi-chat"
+                             viewBox="0 0 16 16">
+                            <path d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z" />
+                        </svg>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="showParticipationWindowBtn nav-link-pad nav-link">
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                             width="22"
+                             height="22"
+                             fill="currentColor"
+                             class="bi bi-lightbulb"
+                             viewBox="0 0 16 16">
+                            <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13a.5.5 0 0 1 0 1 .5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1 0-1 .5.5 0 0 1 0-1 .5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm6-5a5 5 0 0 0-3.479 8.592c.263.254.514.564.676.941L5.83 12h4.342l.632-1.467c.162-.377.413-.687.676-.941A5 5 0 0 0 8 1z" />
+                        </svg>
+                    </a>
+                </li>
+                <li class="me-3 nav-item">
+                    <button style="width: 34.5px;" class="showNewIdeaWindowBtn p-0 btn bg-transparent m-0 nav-link">
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                             width="22"
+                             height="22"
+                             fill="currentColor"
+                             class="bi bi-patch-plus"
+                             viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                  d="M8 5.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V10a.5.5 0 0 1-1 0V8.5H6a.5.5 0 0 1 0-1h1.5V6a.5.5 0 0 1 .5-.5z" />
+                            <path d="m10.273 2.513-.921-.944.715-.698.622.637.89-.011a2.89 2.89 0 0 1 2.924 2.924l-.01.89.636.622a2.89 2.89 0 0 1 0 4.134l-.637.622.011.89a2.89 2.89 0 0 1-2.924 2.924l-.89-.01-.622.636a2.89 2.89 0 0 1-4.134 0l-.622-.637-.89.011a2.89 2.89 0 0 1-2.924-2.924l.01-.89-.636-.622a2.89 2.89 0 0 1 0-4.134l.637-.622-.011-.89a2.89 2.89 0 0 1 2.924-2.924l.89.01.622-.636a2.89 2.89 0 0 1 4.134 0l-.715.698a1.89 1.89 0 0 0-2.704 0l-.92.944-1.32-.016a1.89 1.89 0 0 0-1.911 1.912l.016 1.318-.944.921a1.89 1.89 0 0 0 0 2.704l.944.92-.016 1.32a1.89 1.89 0 0 0 1.912 1.911l1.318-.016.921.944a1.89 1.89 0 0 0 2.704 0l.92-.944 1.32.016a1.89 1.89 0 0 0 1.911-1.912l-.016-1.318.944-.921a1.89 1.89 0 0 0 0-2.704l-.944-.92.016-1.32a1.89 1.89 0 0 0-1.912-1.911l-1.318.016z" />
+                        </svg>
+                    </button>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-action="im" asp-controller="user">
+                        <img src="~/media/userAvatars/@avatar" height="33" class="b-all rounded-circle" />
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
 <div class="container-sm p-0 main_idea" style="margin-top: 140px;">
     <div class="mt-3 mt-md-0 idea_aside position-relative">
@@ -26,8 +149,8 @@
                                      width="192"
                                      class="rounded-circle" />
                             </div>
-                            <div class="aside_section_adaptive b-bottom pt-5 pb-5 justify-content-center col-12 d-flex align-items-center">
-                                <span class="t-md t-med clr-white">@Model.Name</span>
+                            <div class="text-center aside_section_adaptive b-bottom pt-5 pb-5 justify-content-center col-12 d-flex align-items-center">
+                                <label class="t-md t-med clr-white">@Model.Name</label>
                             </div>
                         </div>
                     </section>
