--- a/Web/Views/Find/Index.cshtml
+++ b/Web/Views/Find/Index.cshtml
@@ -7,6 +7,7 @@
 
 @{
     string avatar = @User.Claims.Where(x => x.Type.Equals("UserAvatarName")).Select(x => x.Value).SingleOrDefault();
+    string userName = @User.Claims.Where(x => x.Type.Equals("UserName")).Select(x => x.Value).SingleOrDefault();
 }
 
 <div class="d-none position-fixed top-0" id="hideBackgroundWrapper">
@@ -140,6 +141,67 @@
                     </div>
                     <!---->
                 }
+                <!--Participation-->
+                <div id="participationWindow" class="d-none window_rounded_shadow">
+                    <div class="b-bottom d-flex p-2 ps-3 col-12 align-items-center justify-content-between">
+                        <span class="clr-white t-md">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 width="19"
+                                 height="19"
+                                 fill="currentColor"
+                                 class="clr-mute bi bi-person-plus"
+                                 viewBox="0 0 16 16">
+                                <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
+                                <path fill-rule="evenodd"
+                                      d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z" />
+                            </svg>
+                            Недавние идеи
+                        </span>
+                        <button class="closeParticipationWindowBtn btn btn-sm bg-transparent clr-white">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 width="24"
+                                 height="24"
+                                 fill="currentColor"
+                                 class="bi bi-x"
+                                 viewBox="0 0 16 16">
+                                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="col-12 p-4">
+                        <div class="p-3 d-flex justify-content-center align-items-center">
+                            <div class="d-flex align-items-center">
+                                <img height="33"
+                                     width="33"
+                                     class="rounded-circle me-1"
+                                     src="~/media/userAvatars/@avatar" />
+                                <div class="ps-1">
+                                    @userName
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mt-2 b-left col-12 ps-3 pe-3">
+                            <span class="t-sm clr-mute">Вы участвуйте</span>
+                            <div class="pt-1 custom-scroll" id="participationWindowLoad">
+                                <div class="mb-2 repostToUser">
+                                    <a>
+                                        <span class="t-smbold clr-white hover-white d-inline-block text-truncate"
+                                              style="max-width: 190px;">
+                                            Online SpaceshiompentOnline Spaceshiompent
+                                        </span>
+                                    </a>
+                                    <label class="clr-mute t-smbold t-sm">Автор</label>
+                                </div>
+                                <div id="participationWindowLoadPrev" class="d-none d-flex justify-content-center h-100 align-items-center">
+                                    <div class="pt-4 spinner-border clr-mute" role="status">
+                                        <span class="sr-only"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!---->
                 <!--New Idea + -->
                 <div id="newIdeaWindow" class="d-none window_rounded_shadow">
                     <div class="b-bottom d-flex p-2 ps-3 col-12 align-items-center justify-content-between">
@@ -259,7 +321,7 @@
 {
     <nav id="topNavbar" class="z-1 navbar navbar-expand-lg navbar-dark bg-black b-bottom">
         <div class="container container-micro pe-5">
-            <a class="navbar-brand me-2" href="#">
+            <a class="navbar-brand me-2" href="/">
                 <img src="~/media/site/logo.png" alt="" width="36" />
             </a>
             <button class="navbar-toggler"
@@ -272,9 +334,10 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <form asp-action="index" asp-controller="find" class="search-nav-form flex-form-dark circle-flex-search">
+                <form asp-controller="find" class="search-nav-form flex-form-dark circle-flex-search">
                     <div class="dropdown">
-                        <input name="search"
+                        <input autocomplete="off"
+                               name="search"
                                id="dropdownMenuLink"
                                data-bs-toggle="dropdown"
                                aria-expanded="false"
@@ -322,12 +385,12 @@
                 <ul style="align-items: center;"
                     class="navbar-nav ms-auto mb-2 mb-lg-0 pe-4">
                     <li class="nav-item">
-                        <a class="nav-link" disabled asp-controller="home">
+                        <a class="nav-link-pad nav-link" href="/">
                             <svg xmlns="http://www.w3.org/2000/svg"
                                  width="22"
                                  height="22"
                                  fill="currentColor"
-                                 class="clr-white bi bi-house"
+                                 class="bi bi-house"
                                  viewBox="0 0 16 16">
                                 <path fill-rule="evenodd"
                                       d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
@@ -337,19 +400,19 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="find">
+                        <a disabled class="nav-link-pad nav-link" href="/find">
                             <svg xmlns="http://www.w3.org/2000/svg"
                                  width="22"
                                  height="22"
                                  fill="currentColor"
-                                 class="bi bi-people"
+                                 class="clr-white bi bi-people"
                                  viewBox="0 0 16 16">
                                 <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z" />
                             </svg>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="chat">
+                        <a class="nav-link-pad nav-link"  href="/chat">
                             <svg xmlns="http://www.w3.org/2000/svg"
                                  width="22"
                                  height="22"
@@ -361,7 +424,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="showParticipationWindowBtn nav-link-pad nav-link">
                             <svg xmlns="http://www.w3.org/2000/svg"
                                  width="22"
                                  height="22"
@@ -373,7 +436,7 @@
                         </a>
                     </li>
                     <li class="me-3 nav-item">
-                        <button class="showNewIdeaWindowBtn p-0 btn bg-transparent m-0 nav-link">
+                        <button style="width: 34.5px;" class="showNewIdeaWindowBtn p-0 btn bg-transparent m-0 nav-link">
                             <svg xmlns="http://www.w3.org/2000/svg"
                                  width="22"
                                  height="22"
@@ -387,8 +450,8 @@
                         </button>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-action="me" asp-controller="user">
-                            <img src="~/media/userAvatars/@avatar" height="33" class="rounded-circle" />
+                        <a class="nav-link" asp-action="im" asp-controller="user">
+                            <img src="~/media/userAvatars/@avatar" height="33" class="b-all rounded-circle" />
                         </a>
                     </li>
                 </ul>
@@ -398,64 +461,66 @@
 }
 else
 {
-    <nav class="position-relative present_nav_wrapper container-fluid d-flex justify-content-center">
-        <div class="present_nav d-flex position-fixed align-items-center justify-content-center"
-             style="
+<nav style="height:75px!important;" class="bg-primary present_nav_wrapper container-fluid d-flex justify-content-center">
+    <div class="present_nav d-flex position-fixed align-items-center justify-content-center"
+         style="
           z-index: 10;
-          height: 100px;
+          height: 75px;
           top: 0 !important;
           background: rgb(0 90 255 / 0%);
         ">
+        <a href="/account/login">
             <div class="d-flex align-items-center">
-                <img class="present_hide_elems" height="55" src="./icon.png" />
+                <img class="image-link-animation present_hide_elems" height="33" src="~/media/site/logo.png" />
                 <div class="ps-2">
                     <h1 class="t-brand mb-0">Roundile</h1>
                 </div>
             </div>
+        </a>
 
-            <div class="ms-auto d-flex">
-                <a class="t-nav-link me-3" disabled asp-controller="home">
-                    <svg xmlns="http://www.w3.org/2000/svg"
-                         width="26"
-                         height="26"
-                         fill="currentColor"
-                         class="clr-white bi bi-house"
-                         viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                              d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
-                        <path fill-rule="evenodd"
-                              d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z" />
-                    </svg>
-                </a>
-                <a class="me-3 t-nav-link" asp-controller="find">
-                    <svg xmlns="http://www.w3.org/2000/svg"
-                         width="26"
-                         height="26"
-                         fill="currentColor"
-                         class="bi bi-people"
-                         viewBox="0 0 16 16">
-                        <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z" />
-                    </svg>
-                </a>
-                <a class="me-3 t-nav-link" asp-action="about" asp-controller="home">
-                    <svg xmlns="http://www.w3.org/2000/svg"
-                         width="23"
-                         height="23"
-                         fill="currentColor"
-                         class="bi bi-info-circle"
-                         viewBox="0 0 16 16">
-                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-                        <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
-                    </svg>
-                </a>
-            </div>
-            <div class="ps-2 ps-md-4">
-                <button class="async-open-login  present_btn async-open-login icon-link-btn">
-                    Присоединиться
-                </button>
-            </div>
+        <div class="ms-auto d-flex">
+            <a class="t-nav-link me-3" href="/home">
+                <svg xmlns="http://www.w3.org/2000/svg"
+                     width="26"
+                     height="26"
+                     fill="currentColor"
+                     class="bi bi-house"
+                     viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                          d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
+                    <path fill-rule="evenodd"
+                          d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z" />
+                </svg>
+            </a>
+            <a class="me-3 t-nav-link" href="/find">
+                <svg xmlns="http://www.w3.org/2000/svg"
+                     width="26"
+                     height="26"
+                     fill="currentColor"
+                     class="bi bi-people"
+                     viewBox="0 0 16 16">
+                    <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z" />
+                </svg>
+            </a>
+            <a class="me-3 t-nav-link" href="/about">
+                <svg xmlns="http://www.w3.org/2000/svg"
+                     width="23"
+                     height="23"
+                     fill="currentColor"
+                     class="bi bi-info-circle"
+                     viewBox="0 0 16 16">
+                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                    <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                </svg>
+            </a>
         </div>
-    </nav>
+        <div class="ps-2 ps-md-4">
+            <button class="bg-black present_btn async-open-login icon-link-btn">
+                Присоединиться
+            </button>
+        </div>
+    </div>
+</nav>
 }
 
 <div class="container-sm main_idea" style="margin-top: 140px;">
