--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -410,9 +410,10 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <form asp-action="index" asp-controller="home" class="search-nav-form flex-form-dark circle-flex-search">
+                <form asp-controller="home" class="search-nav-form flex-form-dark circle-flex-search">
                     <div class="dropdown">
-                        <input name="search"
+                        <input autocomplete="off"
+                               name="search"
                                id="dropdownMenuLink"
                                data-bs-toggle="dropdown"
                                aria-expanded="false"
@@ -480,7 +481,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link-pad nav-link" asp-controller="chat" asp-action="">
+                        <a class="nav-link-pad nav-link" asp-controller="chat">
                             <svg xmlns="http://www.w3.org/2000/svg"
                                  width="22"
                                  height="22"
@@ -529,28 +530,31 @@
 }
 else
 {
-<nav class="position-relative present_nav_wrapper container-fluid d-flex justify-content-center">
-    <div class="present_nav d-flex position-fixed align-items-center justify-content-center"
+
+    <nav style="height:75px!important;" class="bg-primary present_nav_wrapper container-fluid d-flex justify-content-center">
+        <div class="present_nav d-flex position-fixed align-items-center justify-content-center"
          style="
           z-index: 10;
-          height: 100px;
+          height: 75px;
           top: 0 !important;
           background: rgb(0 90 255 / 0%);
         ">
-        <div class="d-flex align-items-center">
-            <img class="present_hide_elems" height="55" src="./icon.png" />
-            <div class="ps-2">
-                <h1 class="t-brand mb-0">Roundile</h1>
-            </div>
-        </div>
+            <a href="/account/login">
+                <div class="d-flex align-items-center">
+                    <img class="image-link-animation present_hide_elems" height="33" src="~/media/site/logo.png" />
+                    <div class="ps-2">
+                        <h1 class="t-brand mb-0">Roundile</h1>
+                    </div>
+                </div>
+            </a>
 
         <div class="ms-auto d-flex">
-            <a class="t-nav-link me-3" disabled  asp-controller="home">
+            <a class="t-nav-link me-3" href="/home">
                 <svg xmlns="http://www.w3.org/2000/svg"
                      width="26"
                      height="26"
                      fill="currentColor"
-                     class="clr-white bi bi-house"
+                     class="bi bi-house"
                      viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
                           d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
@@ -558,7 +562,7 @@ else
                           d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z" />
                 </svg>
             </a>
-            <a class="me-3 t-nav-link"  asp-controller="find">
+            <a class="me-3 t-nav-link" href="/find">
                 <svg xmlns="http://www.w3.org/2000/svg"
                      width="26"
                      height="26"
@@ -568,7 +572,7 @@ else
                     <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z" />
                 </svg>
             </a>
-            <a class="me-3 t-nav-link" asp-action="about" asp-controller="home">
+            <a class="me-3 t-nav-link" href="/about">
                 <svg xmlns="http://www.w3.org/2000/svg"
                      width="23"
                      height="23"
@@ -581,12 +585,12 @@ else
             </a>
         </div>
         <div class="ps-2 ps-md-4">
-            <button class="async-open-login  present_btn async-open-login icon-link-btn">
+            <button class="bg-black present_btn async-open-login icon-link-btn">
                 Присоединиться
             </button>
         </div>
     </div>
-</nav>
+    </nav>
 }
 
 <div class="container-sm main_idea p-0" style="margin-top: 100px;">
