--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -46,6 +46,25 @@
 
     <!---->
     @RenderBody()
+
+    <footer>
+        <div class="container-sm pt-5 pb-4">
+            <div class="text-center">
+                <label class="text-muted t-med t-sm">
+                    Roundile 2022
+                    <img src="~/media/site/logo.png" class="ms-1" height="18" />
+                </label>
+            </div>
+            <div class="pt-2 d-flex justify-content-center flex-wrap">
+                <a asp-route-section="ideas" asp-controller="about" class="text-muted t-med t-sm pe-3">Об идеях</a>
+                <a asp-route-section="communication" asp-controller="about" class="text-muted t-med t-sm pe-3">Коммуникация</a>
+                <a asp-route-section="contacts" asp-controller="about" class="text-muted  t-med t-sm pe-3">Контакты</a>
+                <a asp-route-section="us" asp-controller="about" class="text-muted t-med t-sm pe-3">О нас</a>
+                <a asp-route-section="donate" asp-controller="about" class="text-muted t-med t-sm pe-3">Поддержать</a>
+            </div>
+        </div>
+    </footer>
+
     <!--
         <script src="~/js/signalr/dist/browser/signalr.min.js"></script>
     -->
